--- a/roles/infrastructure/rdbms/tasks/postgresql-RedHat.yml
+++ b/roles/infrastructure/rdbms/tasks/postgresql-RedHat.yml
@@ -20,7 +20,7 @@
     description: PostgreSQL common for RHEL/CentOS
     baseurl: https://download.postgresql.org/pub/repos/yum/common/redhat/rhel-$releasever-$basearch
     gpgkey: https://download.postgresql.org/pub/repos/yum/RPM-GPG-KEY-PGDG
-    proxy: {{ proxy_url | default('') }}
+    proxy: "{{ proxy_url | default('') }}"
   when: not (skip_rdbms_repo_setup | default(False))
 
 - name: Install PostgreSQL version repository
@@ -29,7 +29,7 @@
     description: PostgreSQL {{ postgresql_version }} for RHEL/CentOS
     baseurl: https://download.postgresql.org/pub/repos/yum/{{ postgresql_version }}/redhat/rhel-$releasever-$basearch
     gpgkey: https://download.postgresql.org/pub/repos/yum/RPM-GPG-KEY-PGDG
-    proxy: {{ proxy_url | default('') }}
+    proxy: "{{ proxy_url | default('') }}"
   when: not (skip_rdbms_repo_setup | default(False))
 
 - name: Install PostgreSQL
