disable built-in postgres module

--- a/roles/infrastructure/rdbms/tasks/postgresql-RedHat.yml
+++ b/roles/infrastructure/rdbms/tasks/postgresql-RedHat.yml
@@ -32,6 +32,14 @@
     proxy: "{{ proxy_url | default('') }}"
   when: not (skip_rdbms_repo_setup | default(False))
 
+
+- name: Disable built-in PostgreSQL module
+  shell: |
+    dnf -qy module disable postgresql
+  args:
+    warn: no
+  when: not (skip_rdbms_repo_setup | default(False))
+
 - name: Install PostgreSQL
   include_role:
     name: geerlingguy.postgresql
